# agentopia-super-rag

./: .env.e2e  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.e2e.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md  pull_request_template.md
db/: 022_document_records.sql  023_source_type.sql  024_orchestrator_metadata.sql  025_evaluation.sql  026_eval_fixes.sql
docs/: architecture.md  data-model.md  e2e.md  evaluation.md  events.md  migration.md  operations.md
e2e/: Dockerfile.stub  embedding_stub.py  real_system_validation.sh
evaluation/: README.md  __init__.py  e2e_baseline_test.py  phase1a_runner.py  phase1b_baseline.py  requirements-eval.txt  retrieval_metrics.py  run_phase2a_comparison.py  run_phase2a_full_comparison.py  w1_chunking_comparison.py  w1_promotion_gate.py  w1_real_pilot_gate.py  w3a_expansion_comparison.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_auth.py  test_binding_cache.py  test_evaluation.py  test_evaluation_artifacts.py  test_evaluation_phase1a.py  test_evaluation_phase1b.py  test_hybrid_retrieval.py  test_hyde.py  test_knowledge.py  test_knowledge_lifecycle.py  test_knowledge_phase0.py  test_knowledge_provenance.py  test_knowledge_remediation.py  test_knowledge_w1.py  test_list_documents_pathway.py  test_markdown_chunking.py  test_operator_api.py  test_orchestrator_ingest_scope_stats.py  test_pathway_payload_compat.py  test_proxy_compat.py  test_query_expansion.py  test_reranking.py  test_section_path.py
(+34 files in other folders)
